// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component, component UI test demo should render list item with mount 1`] = `
<div class="todo-list-wrapper">
  <div class="input-item-wrapper"><input type="text" class="item-input"><button class="add-todo-btn">Add</button></div>
  <div class="todo-item-wrapper"><span class="todo-item completed">准备session ppt</span><span class="remove-btn">remove</span></div>
  <div class="todo-item-wrapper"><span class="todo-item">准备session demo code</span><span class="remove-btn">remove</span></div>
</div>
`;

exports[`List component, component UI test demo should render list item with shallowMount 1`] = `
<div class="todo-list-wrapper">
  <div class="input-item-wrapper"><input type="text" class="item-input"><button class="add-todo-btn">Add</button></div>
  <item-stub title="准备session ppt" completed="true"></item-stub>
  <item-stub title="准备session demo code" completed="false"></item-stub>
</div>
`;
